Add review followup fixes